<resources>
    <string name="app_name">Gocci</string>
    <string name="map_key">AIzaSyBHYT0dtZUDaiId_WXPtjdQr-t3BlzHXGg</string>
    <string name="facebook_app_id">977612005613710</string>
    <string name="lat">latitude</string>
    <string name="lon">longitude</string>
    <string name="tab_latest">Latest</string>
    <string name="tab_follow">Follow</string>
    <string name="tab_near">Near</string>
    <string name="tab_gochi">Do Gochi</string>
    <string name="tab_comment">Do Comment</string>
    <string name="timeline">Timeline</string>
    <string name="mypage">Mypage</string>
    <string name="send_advice">Send Advice</string>
    <string name="settings">Settings</string>
    <string name="youbou">Want</string>
    <string name="kujou">Crame</string>
    <string name="ikenn">Opinion</string>
    <string name="wa">Wa</string>
    <string name="you">French</string>
    <string name="tyuu">Chinese</string>
    <string name="care">Carry</string>
    <string name="ramen">Ramen</string>
    <string name="takoku">Overseas</string>
    <string name="cafe">Cafe</string>
    <string name="sake">Sake</string>
    <string name="sonota">Others</string>
    <string name="nigi">Cheer!</string>
    <string name="yutta">Relax</string>
    <string name="seeHomepage">Homepage</string>
    <string name="reserve">Reservation</string>
    <string name="go_here">Let is Go!</string>
    <string name="etc">Others</string>
    <string name="infomation">Information</string>
    <string name="seeWantList">see WantsList</string>
    <string name="add_restname_text">Nothing to restarurant in the list........</string>
    <string name="add_cheer_text">Cheer!</string>
    <string name="enjoy_eat">Enjoy Food</string>
    <string name="introduce">FoodMovieApp「Gocci」</string>
    <string name="start_gocci">Start Gocci</string>
    <string name="restname">Restname</string>
    <string name="restname_strong">Restname(must)</string>
    <string name="locality">Locality</string>
    <string name="username">Username</string>
    <string name="comment">Comment</string>
    <string name="datetime">ago</string>
    <string name="notice">Notification</string>
    <string name="category">Category</string>
    <string name="atmosphere">Atmosphere</string>
    <string name="value">Value</string>
    <string name="value_property">Value_property</string>
    <string name="value_strong">Value(number)</string>
    <string name="distance">Distance</string>
    <string name="email">Mail-Address</string>
    <string name="password">Password</string>
    <string name="want">Wants!</string>
    <string name="please">Please Username</string>
    <string name="sort">Sort by</string>
    <string name="japanese">Japanese</string>
    <string name="english">English</string>
    <string name="gochi">Gochi!</string>
    <string name="follow">Follow</string>
    <string name="follower">Follower</string>
    <string name="notification">Notification</string>
    <string name="follow_list">Follow</string>
    <string name="follower_list">Follower</string>
    <string name="cheer_list">Cheer</string>
    <string name="want_list">Want</string>
    <string name="cheer_user_list">Cheer User</string>
    <string name="post_count">PostCount</string>
    <string name="gochi_count">GochiCount</string>
    <string name="two">Both Mobile Network and Wi-Fi</string>
    <string name="one">Wi-Fi only</string>
    <string name="zero">No Autoplay</string>
    <string name="complete_share">Completed!</string>
    <string name="cancel_share">Cancelled.....</string>
    <string name="error_share">Failure.....</string>
    <string name="cancel_login">Cancelled</string>
    <string name="error_login">Failure login.....</string>
    <string name="error_account_no_exist">nothing create User yet</string>
    <string name="please_input_restname">Please write Restname</string>
    <string name="please_input_username">Please write Username</string>
    <string name="multiple_username">this User already exist......</string>
    <string name="bad_internet_connection">bad response.....</string>
    <string name="add_restname">Please write Restname here</string>
    <string name="add_restname_post">Submit</string>
    <string name="error_internet_connection">Oops....Bad response.....</string>
    <string name="add_restname_complete_message">Added restaurant!</string>
    <string name="videoposting_failure">Post Failure.....</string>
    <string name="videoposting_success">Completed!</string>
    <string name="videoposting_message">Please wait for  minute</string>
    <string name="post_comment">Send</string>
    <string name="nothing_tag">No-Tag</string>
    <string name="preparing_share">Preparing.....</string>
    <string name="preparing_share_error">Please wait</string>
    <string name="add_want">Wants!</string>
    <string name="remove_want">No Wants.....</string>
    <string name="nothing_etc">Nothing others</string>
    <string name="do_follow">Follow</string>
    <string name="do_unfollow">Following</string>
    <string name="do_yours">This is yours</string>
    <string name="do_post">Submit!</string>
    <string name="finish_camera_location_error">Finish camera caused by nothing Location</string>
    <string name="videoposting_complete">Comleted!</string>
    <string name="info_gocci">Notification</string>
    <string name="check_delete_post">Are you delete this post？</string>
    <string name="check_delete_yeah">Delete it</string>
    <string name="check_delete_no">No</string>
    <string name="check_change_yeah">Change</string>
    <string name="cheat_input">Cheat.....</string>
    <string name="cheat_input_password">Prease write Password</string>
    <string name="check_not_implemented_message">Please wait.....create now</string>
    <string name="check_not_implemented_yeah">Close</string>
    <string name="delete_post_complete_message">Deleted</string>
    <string name="change_profile_dialog_title">Please click</string>
    <string name="change_profile_dialog_yeah">change</string>
    <string name="change_profile_dialog_complete">Profile changed!</string>
    <string name="change_profile_dialog_error_username">Failure.....</string>
    <string name="change_profile_dialog_error_username_message">this User already exist.....</string>
    <string name="cheat_input_username">cheat.....</string>
    <string name="login">Login</string>
    <string name="filter">Filterring</string>
    <string name="maplog">MapLog</string>
    <string name="auth_twitter_message">Twitter Authentication</string>
    <string name="auth_facebook_message">Facebook Authentication</string>
    <string name="auth_skip">Go Start!</string>
    <string name="setting_password">Set Password</string>
    <string name="remove_auth_twitter_message">Are you remove Twitter Authentication?</string>
    <string name="remove_auth_facebook_message">Are you remove Facebook Authentication?</string>
    <string name="remove_auth_yeah">Remove it</string>
    <string name="remove_auth_no">No</string>
    <string name="auth_sns_complete_message">Removed!</string>
    <string name="no_auth_message">No Authentication</string>
    <string name="login_failure">Failure.....</string>
    <string name="rule">Rule</string>
    <string name="policy">Policy</string>
    <string name="source">Source library</string>
    <string name="twitter_login_text">Signin with Twitter</string>
    <string name="camera_title">GocciCamera</string>
    <string name="camera_message">This camera record movie while button click. Please Landscape!</string>
    <string name="camera_alert">Please landscape!</string>
    <string name="camera_location_title">About Location Settings</string>
    <string name="camera_location_message">Please change settings about Location</string>
    <string name="camera_location_yeah">Change it</string>
    <string name="camera_location_no">No</string>
    <string name="camera_location_cancel">cannot show near restaurants!</string>
    <string name="finish_causedby_location">Finish Gocci caused by Location</string>
    <string name="advice_title">Send advice</string>
    <string name="advice_message">Please write Comment</string>
    <string name="advice_yeah">Send Gocci</string>
    <string name="advice_alert">Please write</string>
    <string name="advice_complete">Thanks for helping!</string>
    <string name="violate_title">Violate</string>
    <string name="violate_message">This post is violate?</string>
    <string name="violate_yeah">Yeah</string>
    <string name="violate_no">No</string>
    <string name="add_sns_message">The case already sns authentication, old User cannot use never. Are you OK?</string>
    <string name="add_sns_yeah">Yeah</string>
    <string name="add_sns_no">No</string>
    <string name="notice_from_gochi">さんからgochi!されました</string>
    <string name="notice_from_comment">さんからコメントされました</string>
    <string name="notice_from_follow">さんからフォローされました</string>
    <string name="login_username_and_password">Login with Username and Password</string>
    <string name="login_sns">Login with SocialNetwork</string>
    <string name="login_with_twitter">Login with Twitter</string>
    <string name="login_with_facebook">Login with Facebook</string>
    <string name="setting_account">Account</string>
    <string name="setting_account_language">Language</string>
    <string name="setting_account_password">Set Password</string>
    <string name="setting_account_notification">Notification</string>
    <string name="setting_friend">Friend</string>
    <string name="setting_friend_search">Search</string>
    <string name="setting_friend_invite">Invite</string>
    <string name="setting_socialnetwork">SocialNetwork</string>
    <string name="setting_socialnetwork_twitter">Twitter</string>
    <string name="setting_socialnetwork_facebook">Facebook</string>
    <string name="setting_socialnetwork_instagram">Instagram</string>
    <string name="setting_socialnetwork_invite_twitter">Invite friends by Twitter</string>
    <string name="setting_socialnetwork_invite_facebook">Invite friends by Facebook</string>
    <string name="setting_support">Support</string>
    <string name="setting_support_autoplay">AutoPlay</string>
    <string name="setting_support_advice">Send advice</string>
    <string name="setting_support_rule">Rule</string>
    <string name="setting_support_policy">Policy</string>
    <string name="setting_support_source">Sourcelibrary</string>
    <string name="setting_support_version">Version</string>
    <string name="setting_support_delete">Delete user</string>
    <string name="setting_support_logout">Logout</string>
    <string name="already_have_account">Please click already have user!</string>
    <string name="edit_profile">Change Profile</string>
    <string name="about_gocci">What is Gocci</string>
    <string name="about_gocci2">Gocci is short movie food app</string>
    <string name="about_gocci3">Seven seconds</string>
    <string name="about_gocci4">Record Restaurant</string>
    <string name="about_gocci5">Record by Video!</string>
    <string name="about_gocci6">Let is Recording</string>
    <string name="about_gocci7">So</string>
    <string name="about_gocci8">Wolcome to Gocci!!!</string>
    <string name="about_gocci9">Let is Authentication</string>
    <string name="notes1">login and</string>
    <string name="notes2">and</string>
    <string name="notes3">lead to agree</string>
    <string name="share_facebook">Share with Facebook</string>
    <string name="share_twitter">Share with Twitter</string>
    <string name="share_instagram">Share with Instagram</string>
    <string name="close">Close</string>
    <string name="popup_violate">Violate</string>
    <string name="popup_delete">delete</string>
    <string name="search_friend_hint">Please write Username</string>
    <string name="search_friend_yeah">Search</string>
    <string name="password_message">Please write password</string>
    <string name="password_yeah">Submit</string>
</resources>