<?xml version="1.0" encoding="utf-8"?>
<com.andexert.library.RippleView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ripple="http://schemas.android.com/apk/res-auto"
    android:id="@+id/tenpoRipple"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/list_bg"
    ripple:rv_color="@android:color/black">

    <TextView
        android:id="@+id/rest_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:layout_marginLeft="12dp"
        android:layout_marginTop="12dp"
        android:singleLine="true"
        android:text="@string/restname"
        android:textColor="@color/namegrey"
        android:textSize="@dimen/small_text" />

    <TextView
        android:id="@+id/category"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/rest_name"
        android:layout_marginBottom="12dp"
        android:layout_marginLeft="12dp"
        android:background="@drawable/button_tag_category"
        android:text="@string/category"
        android:textColor="#ffffff"
        android:textSize="@dimen/small_text" />

    <TextView
        android:id="@+id/mood"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/rest_name"
        android:layout_marginBottom="12dp"
        android:layout_marginLeft="8dp"
        android:layout_toRightOf="@+id/category"
        android:background="@drawable/button_tag_atmosphere"
        android:text="@string/atmosphere"
        android:textColor="#ffffff"
        android:textSize="@dimen/small_text" />

    <TextView
        android:id="@+id/value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/rest_name"
        android:layout_marginBottom="12dp"
        android:layout_marginLeft="8dp"
        android:layout_toRightOf="@+id/mood"
        android:background="@drawable/button_tag_value"
        android:text="@string/value"
        android:textColor="#ffffff"
        android:textSize="@dimen/small_text" />

</com.andexert.library.RippleView>
