<?xml version="1.0" encoding="utf-8"?>
<com.inase.android.gocci.Base.BlockEditTextDefaultFocusLinearLayout
    android:layout_width="240dp"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/view_background"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <com.weiwangcn.betterspinner.library.material.MaterialBetterSpinner
        android:id="@+id/category_spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="8dp"
        android:hint="@string/category"
        android:textColor="@color/timecolor"
        android:textSize="@dimen/small_text"
        app:met_floatingLabel="normal"
        app:met_floatingLabelTextSize="10sp" />

    <ImageView
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_marginTop="8dp"
        android:layout_gravity="center_horizontal"
        android:src="@drawable/bs_ic_clear_light"/>

    <com.weiwangcn.betterspinner.library.material.MaterialBetterSpinner
        android:id="@+id/value_spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:hint="@string/value_property"
        android:textColor="@color/timecolor"
        android:textSize="@dimen/small_text"
        app:met_floatingLabel="normal"
        app:met_floatingLabelTextSize="10sp" />

    <ImageView
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_marginTop="8dp"
        android:layout_gravity="center_horizontal"
        android:src="@drawable/bs_ic_clear_light"/>

    <com.weiwangcn.betterspinner.library.material.MaterialBetterSpinner
        android:id="@+id/mood_spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:hint="@string/atmosphere"
        android:textColor="@color/timecolor"
        android:textSize="@dimen/small_text"
        app:met_floatingLabel="normal"
        app:met_floatingLabelTextSize="10sp" />

    <ImageView
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_marginTop="8dp"
        android:layout_gravity="center_horizontal"
        android:src="@drawable/bs_ic_clear_light"/>

    <com.weiwangcn.betterspinner.library.material.MaterialBetterSpinner
        android:id="@+id/sort_spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:hint="@string/sort"
        android:textColor="@color/timecolor"
        android:textSize="@dimen/small_text"
        app:met_floatingLabel="normal"
        app:met_floatingLabelTextSize="10sp" />

    <com.andexert.library.RippleView
        android:id="@+id/filter_Ripple"
        android:layout_width="match_parent"
        android:layout_height="42dp"
        android:layout_centerHorizontal="true"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:background="@color/gocci_button"
        android:gravity="center_vertical">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:src="@drawable/ic_search_white_24dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/filter"
            android:textColor="#ffffff"
            android:layout_centerInParent="true"
            android:textSize="@dimen/normal_text" />
    </com.andexert.library.RippleView>

</com.inase.android.gocci.Base.BlockEditTextDefaultFocusLinearLayout>