<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/list_bg">

    <ImageView
        android:id="@+id/circleImage"
        android:layout_width="@dimen/userpicture_size"
        android:layout_height="@dimen/userpicture_size"
        android:layout_marginBottom="12dp"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="12dp"
        android:src="@drawable/ic_userpicture"
        android:layout_centerVertical="true" />

    <TextView
        android:id="@+id/user_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:maxLength="20"
        android:singleLine="true"
        android:text="@string/username"
        android:textColor="@color/nameblack"
        android:textSize="@dimen/accent_text"
        android:layout_toRightOf="@+id/circleImage"
        android:layout_marginTop="16dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/comment"
        android:textSize="@dimen/small_text"
        android:textColor="@color/nameblack"
        android:singleLine="true"
        android:layout_toRightOf="@+id/circleImage"
        android:id="@+id/comment"
        android:layout_below="@+id/user_name"
        android:layout_marginTop="4dp" />

    <TextView
        android:id="@+id/time_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/datetime"
        android:textColor="@color/timecolor"
        android:textSize="@dimen/small_text"
        android:textStyle="bold"
        android:layout_alignParentRight="true"
        android:layout_marginRight="8dp"
        android:layout_alignTop="@+id/user_name"
        android:layout_marginTop="4dp" />

    <ImageView
        android:layout_width="28dp"
        android:layout_height="28dp"
        android:id="@+id/cheerMedal"
        android:layout_below="@+id/time_text"
        android:layout_alignParentRight="true"
        android:layout_marginTop="4dp"
        android:layout_marginRight="16dp"
        android:src="@drawable/ic_userpicture"
        android:visibility="invisible" />

</RelativeLayout>
