<com.inase.android.gocci.ui.view.BlockEditTextDefaultFocusRelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:wheel="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <android.support.v7.widget.Toolbar
        android:id="@+id/tool_bar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/gocci_header"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        android:layout_alignParentTop="true">

    </android.support.v7.widget.Toolbar>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_username_and_password"
        android:layout_gravity="center_horizontal"
        android:textStyle="bold"
        android:textColor="@color/nameblack"
        android:textSize="@dimen/normal_text"
        android:layout_marginTop="16dp"
        android:layout_below="@+id/tool_bar"
        android:layout_centerHorizontal="true"
        android:id="@+id/username_text" />

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:textColor="@color/timecolor"
        android:id="@+id/signin_username_edit"
        android:layout_marginRight="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="8dp"
        android:layout_below="@+id/username_text"
        android:layout_centerHorizontal="true"
        android:layout_height="wrap_content"
        android:focusableInTouchMode="true">

        <EditText
            android:inputType="textPersonName"
            android:ems="10"
            android:layout_gravity="center_horizontal"
            android:hint="@string/username"
            android:textSize="@dimen/normal_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:textColor="@color/timecolor"
        android:id="@+id/signin_pass_edit"
        android:layout_below="@+id/signin_username_edit"
        android:layout_centerHorizontal="true"
        android:layout_marginRight="16dp"
        android:layout_marginLeft="16dp"
        android:layout_height="wrap_content"
        android:focusableInTouchMode="true">

        <EditText
            android:inputType="textPassword"
            android:ems="10"
            android:layout_gravity="center_horizontal"
            android:hint="@string/password"
            android:textSize="@dimen/normal_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </android.support.design.widget.TextInputLayout>

    <com.andexert.library.RippleView
        android:id="@+id/login_ripple"
        android:layout_width="match_parent"
        android:layout_height="42dp"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:background="@color/gocci_button"
        android:gravity="center"
        android:layout_below="@+id/signin_pass_edit">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:textColor="#ffffff"
            android:textSize="@dimen/accent_text" />
    </com.andexert.library.RippleView>

    <com.facebook.login.widget.LoginButton
        android:id="@+id/login_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginRight="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginBottom="4dp"
        android:layout_marginTop="16dp"
        android:visibility="gone" />

    <com.inase.android.gocci.ui.view.GocciTwitterLoginButton
        android:id="@+id/twitter_login_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/sign_up_button_twitter"
        android:text="twitterでアカウント作成/ログイン"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:visibility="gone" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#c5c6c9"
        android:layout_below="@+id/login_ripple"
        android:id="@+id/divider"
        android:layout_marginTop="16dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_sns"
        android:textSize="@dimen/normal_text"
        android:textColor="@color/nameblack"
        android:textStyle="bold"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="16dp"
        android:layout_below="@+id/divider"
        android:layout_centerHorizontal="true"
        android:id="@+id/sns_text" />

    <com.andexert.library.RippleView
        android:layout_width="match_parent"
        android:layout_height="42dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="8dp"
        android:background="@color/twitter_background"
        android:gravity="center"
        android:id="@+id/twitter_ripple"
        android:layout_below="@+id/sns_text">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_with_twitter"
            android:textColor="#ffffff"
            android:textSize="@dimen/accent_text" />

    </com.andexert.library.RippleView>

    <com.andexert.library.RippleView
        android:layout_width="match_parent"
        android:layout_height="42dp"
        android:id="@+id/facebook_ripple"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="8dp"
        android:background="@color/facebook_background"
        android:gravity="center"
        android:layout_below="@+id/twitter_ripple">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_with_facebook"
            android:textColor="#ffffff"
            android:textSize="@dimen/accent_text" />

    </com.andexert.library.RippleView>

    <com.pnikosis.materialishprogress.ProgressWheel
        android:id="@+id/progress_wheel"
        android:layout_width="@dimen/progress_size"
        android:layout_height="@dimen/progress_size"
        wheel:matProg_barColor="@color/gocci_header"
        wheel:matProg_progressIndeterminate="true"
        android:layout_gravity="center_horizontal|bottom"
        android:visibility="invisible"
        android:layout_centerInParent="true" />

</com.inase.android.gocci.ui.view.BlockEditTextDefaultFocusRelativeLayout>
